TEST: solve sum primes algorithmic exercise

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
    "workbench.editorAssociations": [
    
    ],
-   "editor.codeActionsOnSave": null
+   "editor.codeActionsOnSave": null,
+   "cSpell.ignoreWords": [
+      "primality"
+   ]
 }
