TEST: solve unnesting deep arrays algorithm exercise

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
    ],
    "editor.codeActionsOnSave": null,
    "cSpell.ignoreWords": [
-      "primality"
+      "arrays",
+      "primality",
+      "unnesting",
+      "unnesting arrays"
    ]
 }
